--- a/integracaoV1/Site/view/css/dashGES.css
+++ b/integracaoV1/Site/view/css/dashGES.css
@@ -6,6 +6,7 @@ body {
     background-image: url(../assets/img/loginBackground2.jpg);
     width: 100%;
     
+    
 }
 
 .header {
@@ -67,7 +68,60 @@ a {
     width: 100%;
 }
 
-.grafico1,
+.boxInfoCPUCarros, .boxInfoRAMCarros{
+    display: flex;
+    flex-direction: row; 
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 30px;
+}
+.informacoesCPUCarros, .informacoesRAMCarros{
+    background-color: rgba(0, 0, 0, 0.245);
+    display: flex;
+    width: 90%;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-evenly;
+    border-radius: 10px;
+
+}
+.div_graficoCPU, .div_graficoRAM{
+    display: flex;
+    width: 45%;
+    margin: 35px;
+    border-radius: 10px;
+}
+
+.div_ModelosCarros {
+    margin: 35px;
+    display: flex;
+    width: 45%;
+    flex-direction: column;
+    height: 350px;
+}
+
+.modelos_carros_input_modelos{
+    display: flex;
+    flex-direction: column;
+}
+.teste {
+    display: flex;
+    justify-content: start;
+    flex-direction: row;
+}
+.teste h3{
+    margin-right:60px ;
+}
+
+.div_graficoCPU canvas, .div_graficoRAM  canvas {
+    height: 350px;
+    background-color: rgba(255, 255, 255, 0.771);
+    border-radius: 10px;
+    padding: 2%;
+}
+
+/* .grafico1,
 .grafico2,
 .grafico3 {
     margin: 10px;
@@ -88,7 +142,7 @@ a {
 .grafico3 {
     width: 16.7%;
     background-color: rgba(137, 43, 226, 0.220);
-}
+} */
 @media screen and (max-width: 800px) {
     html{
         width: 120%;
