--- a/integracaoV1/Site/view/css/dashGES.css
+++ b/integracaoV1/Site/view/css/dashGES.css
@@ -88,8 +88,9 @@ a {
 }
 .div_graficoCPU, .div_graficoRAM{
     display: flex;
-    width: 45%;
     margin: 35px;
+    height: 90%;
+    width: 100%;
     border-radius: 10px;
 }
 
@@ -98,7 +99,7 @@ a {
     display: flex;
     width: 45%;
     flex-direction: column;
-    height: 350px;
+    height: 45%;
 }
 
 .modelos_carros_input_modelos{
@@ -115,7 +116,8 @@ a {
 }
 
 .div_graficoCPU canvas, .div_graficoRAM  canvas {
-    height: 350px;
+    height: 90%;
+    width: 100%;
     background-color: rgba(255, 255, 255, 0.771);
     border-radius: 10px;
     padding: 2%;
@@ -176,6 +178,48 @@ a {
         background-color: rgba(137, 43, 226, 0.220);
     }
     
+    .div_ModelosCarros {
+        margin: 35px;
+        display: flex;
+        width: 45%;
+        flex-direction: column;
+        height: 350px;
+    }
+    .boxInfoCPUCarros, .boxInfoRAMCarros{
+        display: flex;
+        flex-direction: column;; 
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 700px;
+        margin-bottom: 30px;
+    }
+    .informacoesCPUCarros, .informacoesRAMCarros{
+        background-color: rgba(0, 0, 0, 0.245);
+        display: flex;
+        flex-direction: column;
+        padding: 2%;
+        width: 90%;
+        height: 90%;
+        align-items: center;
+        justify-content: space-evenly;
+        border-radius: 10px;
+    
+    }
+    .div_graficoCPU, .div_graficoRAM{
+        display: flex;
+        margin: 35px;
+        width: 90%;
+        border-radius: 10px;
+    }
+    .div_graficoCPU canvas, .div_graficoRAM  canvas {
+        height: 350px;
+        width: 100%;
+        background-color: rgba(255, 255, 255, 0.771);
+        border-radius: 10px;
+        padding: 2%;
+    }
+    
 }
 @media screen and (max-width: 500px) {
     html{
@@ -208,6 +252,49 @@ a {
     .grafico3 {
         width: 33.3%;
         background-color: rgba(137, 43, 226, 0.220);
+    }
+    .div_ModelosCarros {
+        margin: 35px;
+        display: flex;
+        width: 45%;
+        flex-direction: column;
+        height: 45%;
+        font-size:13px;
+    }
+    .boxInfoCPUCarros, .boxInfoRAMCarros{
+        display: flex;
+        flex-direction: column;; 
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        margin-bottom: 30px;
+    }
+    .informacoesCPUCarros, .informacoesRAMCarros{
+        background-color: rgba(0, 0, 0, 0.245);
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        height: 100%;
+        align-items: center;
+        justify-content: space-evenly;
+        border-radius: 10px;
+    
+    }
+    .div_graficoCPU, .div_graficoRAM{
+        display: flex;
+        margin: 35px;
+        width: 90%;
+        height: 100%;
+        border-radius: 10px;
+    }
+   
+    .div_graficoCPU canvas, .div_graficoRAM  canvas {
+        height: 90%;
+        width: 100%;
+        background-color: rgba(255, 255, 255, 0.771);
+        border-radius: 10px;
+        padding: 2%;
     }
     
 }
