--- a/integracaoV1/Site/view/dashGES.html
+++ b/integracaoV1/Site/view/dashGES.html
@@ -60,7 +60,7 @@
             </div>
         </div>
     </div>
-    <div class="graficos">
+  <!-- <div class="graficos">
         <div class="grafico1">
             <div class="graficoBarraCPU" id="graficoBarraCPU">
                 <canvas id="grafico1"></canvas>
@@ -71,7 +71,7 @@
             <div class="graficoBarraRAM" id="graficoBarraRAM"><canvas id="grafico2"></canvas></div>
         </div>
 
-        <!--<div class="grafico3">
+        <div class="grafico3">
             <div class="graficoPizzaDisco"><canvas id="grafico3"></canvas></div>
         </div> -->
 
