--- a/integracaoV2/Site/view/css/dashGES.css
+++ b/integracaoV2/Site/view/css/dashGES.css
@@ -68,7 +68,7 @@ a {
     width: 100%;
 }
 
-.boxInfoCPUCarros, .boxInfoRAMCarros{
+.boxInfoCPUCarros, .boxInfoRAMCarros, .boxInfoTempCPUCarros{
     display: flex;
     flex-direction: row; 
     align-items: center;
@@ -76,7 +76,7 @@ a {
     width: 100%;
     margin-bottom: 30px;
 }
-.informacoesCPUCarros, .informacoesRAMCarros{
+.informacoesCPUCarros, .informacoesRAMCarros, .informacoesTempCPUCarros{
     background-color: rgba(0, 0, 0, 0.245);
     display: flex;
     width: 90%;
@@ -86,11 +86,10 @@ a {
     border-radius: 10px;
 
 }
-.div_graficoCPU, .div_graficoRAM{
+.div_graficoCPU, .div_graficoRAM, .div_graficoTempCPU{
     display: flex;
+    width: 45%;
     margin: 35px;
-    height: 90%;
-    width: 100%;
     border-radius: 10px;
 }
 
@@ -99,7 +98,7 @@ a {
     display: flex;
     width: 45%;
     flex-direction: column;
-    height: 45%;
+    height: 350px;
 }
 
 .modelos_carros_input_modelos{
@@ -115,9 +114,8 @@ a {
     margin-right:60px ;
 }
 
-.div_graficoCPU canvas, .div_graficoRAM  canvas {
-    height: 90%;
-    width: 100%;
+.div_graficoCPU canvas, .div_graficoRAM  canvas , .div_graficoTempCPU canvas{
+    height: 350px;
     background-color: rgba(255, 255, 255, 0.771);
     border-radius: 10px;
     padding: 2%;
@@ -177,47 +175,9 @@ a {
         width: 33.3%;
         background-color: rgba(137, 43, 226, 0.220);
     }
-    
-    .div_ModelosCarros {
-        margin: 35px;
-        display: flex;
-        width: 45%;
-        flex-direction: column;
-        height: 350px;
-    }
-    .boxInfoCPUCarros, .boxInfoRAMCarros{
-        display: flex;
-        flex-direction: column;; 
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 700px;
-        margin-bottom: 30px;
-    }
-    .informacoesCPUCarros, .informacoesRAMCarros{
-        background-color: rgba(0, 0, 0, 0.245);
-        display: flex;
-        flex-direction: column;
-        padding: 2%;
-        width: 90%;
-        height: 90%;
-        align-items: center;
-        justify-content: space-evenly;
-        border-radius: 10px;
-    
-    }
-    .div_graficoCPU, .div_graficoRAM{
-        display: flex;
-        margin: 35px;
-        width: 90%;
-        border-radius: 10px;
-    }
-    .div_graficoCPU canvas, .div_graficoRAM  canvas {
-        height: 350px;
-        width: 100%;
-        background-color: rgba(255, 255, 255, 0.771);
-        border-radius: 10px;
-        padding: 2%;
+    .grafico4 {
+        width: 50%;
+        background-color: rgba(221, 55, 146, 0.22);
     }
     
 }
@@ -253,50 +213,10 @@ a {
         width: 33.3%;
         background-color: rgba(137, 43, 226, 0.220);
     }
-    .div_ModelosCarros {
-        margin: 35px;
-        display: flex;
-        width: 45%;
-        flex-direction: column;
-        height: 45%;
-        font-size:13px;
+    .grafico4 {
+        width: 50%;
+        background-color: rgba(221, 55, 146, 0.22);
     }
-    .boxInfoCPUCarros, .boxInfoRAMCarros{
-        display: flex;
-        flex-direction: column;; 
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100%;
-        margin-bottom: 30px;
-    }
-    .informacoesCPUCarros, .informacoesRAMCarros{
-        background-color: rgba(0, 0, 0, 0.245);
-        display: flex;
-        flex-direction: column;
-        width: 90%;
-        height: 100%;
-        align-items: center;
-        justify-content: space-evenly;
-        border-radius: 10px;
-    
-    }
-    .div_graficoCPU, .div_graficoRAM{
-        display: flex;
-        margin: 35px;
-        width: 90%;
-        height: 100%;
-        border-radius: 10px;
-    }
-   
-    .div_graficoCPU canvas, .div_graficoRAM  canvas {
-        height: 90%;
-        width: 100%;
-        background-color: rgba(255, 255, 255, 0.771);
-        border-radius: 10px;
-        padding: 2%;
-    }
-    
 }
 
     
